# KhronosSandbox

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
Example03/: .cproject  .project  CMakeLists.txt
Example03/src/: Application.cpp  main.cpp
Example04/: .cproject  .project  CMakeLists.txt
Example04/src/: Application.cpp  Application.h  main.cpp
TinyEngine/: .cproject  .project  CMakeLists.txt
TinyEngine/src/: BaseEngine.cpp  BaseEngine.h  Compiler.cpp  FileIO.cpp  FileIO.h  Helper.cpp  Helper.h  HelperRaytrace.cpp  HelperRaytrace.h  IXr.h  Logger.h  Math.cpp  Math.h  Random.h  Sample.cpp  Sample.h  TinyEngine.cpp  TinyEngine.h  XrEngine.cpp  XrEngine.h
TinyEngine/src/GLTF/: Accessor.h  GLTF.h  HelperAccess.cpp  HelperLoader.cpp  HelperLoop.cpp  HelperResource.cpp  Mesh.h  Node.h
TinyEngine/src/activity/: Activity.h  AnimationController.h  Interpolator.cpp  Interpolator.h
TinyEngine/src/animation/: Animation.h  AnimationController.cpp  AnimationController.h  Interpolator.h
TinyEngine/src/builder/: Builder.h  WorldBuilder.cpp  WorldBuilder.h
TinyEngine/src/common/: Common.h  Enums.h  Format.h  Logger.cpp  Logger.h
TinyEngine/src/composite/: Composite.h  HelperRaytrace.cpp  HelperRaytrace.h  HelperVulkan.cpp  HelperVulkan.h  HelperVulkanResource.cpp  HelperVulkanResource.h  VulkanRaytraceResource.cpp  VulkanRaytraceResource.h  VulkanResource.cpp  VulkanResource.h
TinyEngine/src/generic/: FileIO.cpp  FileIO.h  Format.h  HelperImageDataResource.h  ImageDataIO.cpp  ImageDataIO.h  ImageIO.h  Logger.cpp  Logger.h  Sample.cpp  Sample.h
TinyEngine/src/generic/gltf/: Accessor.h  Buffer.h  BufferView.h  GLTF.h  HelperAccess.cpp  Image.h  Material.h  Mesh.h  Node.h  PbrMetallicRoughness.h  Primitive.h  Sampler.h  Scene.h  Texture.h  TextureInfo.h
TinyEngine/src/gltf/: Accessor.h  Animation.h  Buffer.h  BufferView.h  GLTF.h  HelperAccess.cpp  HelperAccess.h  HelperAnimate.cpp  HelperAnimate.h  HelperLoad.cpp  HelperLoad.h  HelperLoader.cpp  HelperLoader.h  HelperLoop.cpp  HelperLoop.h  HelperResource.cpp  HelperResource.h  HelperUpdate.cpp  HelperUpdate.h  Image.h  Material.h  Mesh.h  Node.h  PbrMetallicRoughness.h  Primitive.h  Sampler.h  Scene.h  Skin.h  Texture.h  TextureInfo.h
TinyEngine/src/gltf/vulkan/: BufferViewResource.h  GltfResource.h  HelperAccessResource.cpp  HelperLoader.h  (+18 more)
TinyEngine/src/gltf_render/: AllocationManager.cpp  AllocationManager.h  HelperAccessResource.cpp  HelperAccessResource.h  HelperAllocateRessource.cpp  HelperAllocateRessource.h  HelperRasterize.cpp  HelperRasterize.h  HelperRaytrace.cpp  HelperRaytrace.h  Render.h  ResourceManager.cpp  ResourceManager.h
TinyEngine/src/gui/: Gui.h
TinyEngine/src/io/: FileIO.cpp  FileIO.h  HelperFile.cpp  HelperFile.h  HelperImageDataResource.h  IO.h  ImageDataIO.cpp  ImageDataIO.h  ImageDataResources.h
TinyEngine/src/math/: Aabb.cpp  Aabb.h  Frustum.cpp  Frustum.h  Interpolator.h  Math.h  Plane.cpp  Plane.h  Projection.cpp  Projection.h  Random.cpp  Random.h  Sample.cpp  Sample.h  Sphere.cpp  Sphere.h  SphericalCoordinate.cpp  SphericalCoordinate.h  glm_include.h
TinyEngine/src/render/: AllocationManager.cpp  AllocationManager.h  BaseResource.h  BufferViewResource.h  CameraResource.h  GeometryModelResource.h  GeometryResource.h  GltfResource.h  GroupResource.h  HelperAccessResource.cpp  HelperAccessResource.h  HelperAllocateRessource.cpp  HelperAllocateRessource.h  HelperRasterize.cpp  HelperRasterize.h  HelperRaytrace.cpp  HelperRaytrace.h  InstanceResource.h  LightResource.h  MaterialResource.h  PrimitiveResource.h  Render.h  RenderManager.cpp  RenderManager.h  ResourceManager.cpp  ResourceManager.h  SceneResource.h  SharedDataResource.h  TextureDataResource.h  WorldResource.h
TinyEngine/src/resource/: BaseResource.h  BufferViewResource.h  CameraResource.h  GeometryModelResource.h  GeometryResource.h  GroupResource.h  HelperRasterize.cpp  HelperRasterize.h  HelperRaytrace.cpp  HelperRaytrace.h  InstanceResource.h  LightResource.h  MaterialResource.h  PrimitiveResource.h  Resource.h  ResourceManager.cpp  ResourceManager.h  SceneResource.h  SharedDataResource.h  TextureDataResource.h  WorldResource.h
TinyEngine/src/shader/: Compiler.cpp  Compiler.h  HelperComplier.cpp  HelperShader.cpp  HelperShader.h  Shader.h
TinyEngine/src/spir/: Compiler.cpp  Compiler.h  HelperCompiler.h  HelperComplier.cpp
TinyEngine/src/vulkan/: HelperRaytrace.cpp  HelperRaytrace.h  HelperVulkan.cpp  HelperVulkan.h  HelperVulkanResource.cpp  HelperVulkanResource.h  ImageIO.cpp  ImageIO.h
TinyEngine/src/wsi/: Surface.cpp  Surface.h  Wsi.h
(+146 files in other folders)
